refactor(.env.example): atualizando o exemplo de arquivo .env

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,11 @@ TELEGRAM_API_ID=YOUR_API_ID
 TELEGRAM_API_HASH=YOUR_API_HASH
 
 # Credenciais do CallMeBot (Obtenha em https://www.callmebot.com/blog/free-api-whatsapp-messages/)
-NOTIFICATION_PHONE_NUMBER=YOUR_PHONE_NUMBER
-NOTIFICATION_API_ID=YOUR_API_ID
+PESSOA01_NAME=NAME
+PESSOA01_PHONE_NUMBER=5511999999999
+PESSOA01_WHATSAPP_API_ID=1111111
+
+# Palavras-chave para monitorar
+# OBS: Para maior precisão, use o máximo de maneiras possíveis para essa palavra chave: 
+# Ex: water cooler, watercooler, water-cooler
+PESSOA01_KEYWORDS=keyword1,keyword2,keyword3
